# claudecad

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/cad/: SKILL.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-3-report.md
claudecad/: __init__.py  assembly.py  cli.py  export.py  scaffold.py  verify.py
claudecad/core/: centerline.py  twisted.py
claudecad/hardware/: bearing.py  carabiner.py  fastener.py  snapbox.py
claudecad/jewelry/: chains.py  clasps.py  finishing.py  links.py
claudecad/render/: __init__.py  blender_scene.py
designs/_template/: build.py  params.py
designs/bearing_608/: build.py  params.py
designs/bolt/: build.py  params.py
designs/carabiner/: build.py  params.py
designs/cuban_bracelet/: build.py  params.py  probe.py
designs/simple_curb/: build.py  params.py
designs/snapbox/: build.py  params.py
docs/: new-design-recipe.md  releasing.md
docs/superpowers/plans/: 2026-07-12-claudecad.md  2026-07-13-box-clasp.md  (+7 more)
scripts/: sync_skill.py
skills/cad/: SKILL.md
tests/: test_assembly.py  test_bearing.py  test_carabiner.py  test_centerline.py  test_chains.py  test_clasps.py  test_cli.py  test_designs_import.py  test_export.py  test_fastener.py  test_finishing.py  test_links.py  test_render_discovery.py  test_render_smoke.py  test_scaffold.py  test_scaffolder.py  test_snapbox.py  test_twisted.py  test_verify.py
tools/: blender_scene.py  export.py  render.py
tools/step_viewer/: fetch_libs.sh  index.html
(+12 files in other folders)
