[project]
name = "claudecad"
version = "0.1.0"
description = "Claude Code-driven parametric CAD design system"
requires-python = ">=3.12"
dependencies = ["build123d>=0.11,<0.12", "numpy>=1.26"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudecad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
